compiler/src/test/resources/amyc/parser/passing/ChainedMatch.grading.amy
object ChainedMatch
  0 match {
    case x => x 
  } match {
    case 42 => "Yeah"
  }
end ChainedMatch