compiler/src/test/resources/amyc/parser/failing/FunDefError1.grading.amy
object FunDef
  fn foo: Int = { 42 }
end FunDef
